--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "dev": "nodemon app.js"
+    "start": "nodemon app.js",
+    "dev": "concurrently \"nodemon app.js\" \"cd client && npm run dev\""
   },
   "keywords": [],
   "author": "",
@@ -17,6 +18,7 @@
     "mongoose": "^7.3.1"
   },
   "devDependencies": {
+    "concurrently": "^8.2.0",
     "dotenv": "^16.3.1",
     "nodemon": "^2.0.22"
   }
